--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <title>Springtime For Kids</title>
   </head>
   <body>
-    <nav class="navbar navbar-expand-lg navbar-light bg-light">
+    <nav class="navbar navbar-expand-lg" id="our-nav">
       <ul class="nav ">
         <li class="nav-item">
           <a class="nav-link active" href="#">Home</a>
@@ -36,12 +36,13 @@
       <h1>Springtime for Kids</h1>
     </header>
     <main>
-      (This is where your content goes, Team!)
+      <section>
+
+      </section>
     </main>
     <footer>
       <p>Created by Team9 for the Easter Hackathon 2019 on Code Institute.</p>
-      <p>Find us on Github:</p>
-      <div class="container-fluid icons-div">
+      <p>Find us on Github:
         <a href="https://github.com/andreeaiosip">
           <i id="andreea" class="fab fa-github-alt"></i>
         </a>
