added header, nav and footer to story page

--- a/index.html
+++ b/index.html
@@ -19,16 +19,16 @@
     <nav class="navbar navbar-expand-lg" id="our-nav">
       <ul class="nav ">
         <li class="nav-item">
-          <a class="nav-link active" href="#">Home</a>
+          <a class="nav-link active" href="index.html" disabled>Home</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="#">Story Time</a>
+          <a class="nav-link" href="spring-story.html">Story Time</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="#">Games</a>
+          <a class="nav-link" href="games.html">Games</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="#">Signs of Spring</a>
+          <a class="nav-link" href="signsofspring.html">Signs of Spring</a>
         </li>
       </ul>
     </nav>
