added pictures, and grid

--- a/games.html
+++ b/games.html
@@ -35,17 +35,38 @@
         <h2 class="title-h2">Here is your Spring activity to do list!</h2>
     </header>
     <main>
-        </div class="games-checklist">
-        <input type="checkbox" name="activities" value="cycling">Cycling<br>
-        <input type="checkbox" name="activities" value="play football">Play football<br>
-        <input type="checkbox" name="activities" value="fly a kite">Fly a kite<br>
-        <input type="checkbox" name="activities" value="plant flowers">Plant flowers<br>
-        <input type="checkbox" name="activities" value="go for a hike">Go for a hike<br>
-        <input type="checkbox" name="activities" value="blow bubbles">Blow bubbles<br>
-        <input type="checkbox" name="activities" value="treasure hunt">Go for a treasure hunt<br>
-        <input type="checkbox" name="activities" value="plant flowers">Plant flowers<br>
-        <input type="checkbox" name="activities" value="play twister">Play Twister<br>
+    <div class="container">
+        </div class="row">
+
+
+        <div class="row">
+            <div class="column-md-4">
+                <input type="checkbox" name="activities" value="cycling">Cycling
+                <img src="assets/images/cycling.jpeg">
+                <input type="checkbox" name="activities" value="play football">Play football
+                <img src="assets/images/fooftball.jpeg">
+                <input type="checkbox" name="activities" value="fly a kite">Fly a kite
+                <img src="assets/images/kite.jpeg"></div>
         </div>
+        <div class="row">
+            <div class="column-md-4">
+                <input type="checkbox" name="activities" value="plant flowers">Plant flowers
+                <img src="assets/images/flower.jpeg">
+                <input type="checkbox" name="activities" value="go for a hike">Go for a hike
+                <img src="assets/images/hiking.jpeg">
+                <input type="checkbox" name="activities" value="blow bubbles">Blow bubbles
+                <img src="assets/images/bubbles.jpeg">
+            </div>
+        </div>
+        <div class="row">
+            <div class="column-md-4">
+                <input type="checkbox" name="activities" value="treasure hunt">Go for a treasure hunt
+                <img src="assets/images/treasure.jpeg">
+                <input type="checkbox" name="activities" value="play twister">Play Twister
+                <img src="assets/images/twister.jpeg">
+            </div>
+        </div>
+      </div>
     </main>
     <footer>
         <p>Created by Team9 for the Easter Hackathon 2019 on Code Institute.</p>
