updated signsofspring and spring-story layout

--- a/spring-story.html
+++ b/spring-story.html
@@ -49,7 +49,7 @@
             </header>
             <main>
               <section>
-                <img src="./assets/images/butterflies.png" alt="butterflies" width="460" height="345">
+                <img src="assets/images/butterflies.png" alt="butterflies" width="460" height="345">
                 <div class="row">
                     <div class="col-sm-12 col-md-8 story-main">
                         <h5 class="story-title">
