--- a/signsofspring.html
+++ b/signsofspring.html
@@ -1,14 +1,42 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.2.1/css/bootstrap.min.css" integrity="sha384-GJzZqFGwb1QTTN6wy59ffF1BuGJpLSa9DkKMp0DgiMDm4iYMj70gZWKYbI706tWS" crossorigin="anonymous">
-
-    <title>Signs of Spring</title>
-</head>
-<body>
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta http-equiv="X-UA-Compatible" content="ie=edge" />
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.3.1/css/bootstrap.min.css"
+    />
+    <link
+      rel="stylesheet"
+      href="https://use.fontawesome.com/releases/v5.7.2/css/all.css"
+    />
+    <link rel="stylesheet" href="assets/css/style.css" />
+    <title>Springtime For Kids</title>
+  </head>
+  <body>
+    <nav class="navbar navbar-expand-lg" id="our-nav">
+      <ul class="nav ">
+        <li class="nav-item">
+          <a class="nav-link active" href="index.html" disabled>Home</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="spring-story.html">Story Time</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="games.html">Games</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="signsofspring.html">Signs of Spring</a>
+        </li>
+      </ul>
+    </nav>
+    <header>
+      <h1>Springtime for Kids</h1>
+    </header>
+    <main>
+      <section>
 <div class="row">
     <div class="col-12"><h2>What Signs of Spring Have You Seen?</h2><br>
     <p>As Winter turns into Spring, there are lots of changes that we can see happen in nature which let us know that the season is changing. How many of them have you spotted?</p></div>
@@ -42,7 +70,22 @@
         </ul>
     </div>
 </div>
-
-    
+</section>
+</main>
+<footer>
+  <p>Created by Team9 for the Easter Hackathon 2019 on Code Institute.</p>
+  <p>Find us on Github:
+    <a href="https://github.com/andreeaiosip">
+      <i id="andreea" class="fab fa-github-alt"></i>
+    </a>
+    <a href="https://github.com/varroz56"><i id="zoltan" class="fab fa-github-alt"></i></a>
+    <a href="https://github.com/oliviatatum"><i id="olivia" class="fab fa-github-alt"></i></a>
+    <a href="https://github.com/wings30306"><i id="jo" class="fab fa-github-alt"></i></a>
+  </div>
+</footer>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.3.1/jquery.slim.min.js"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.3.1/js/bootstrap.min.js"></script>
+<script src="assets/js/script.js"></script>
 </body>
 </html>
