--- a/signsofspring.html
+++ b/signsofspring.html
@@ -44,8 +44,8 @@
 <div class="row">
     <div class="col-4">
         <ul>
-            <li>Daffodils</li><img src="https://cdn.pixabay.com/photo/2019/02/25/12/23/daffodils-4019558_960_720.jpg" width=100px>
-            <li>Blossom</li> <img src="https://cdn.pixabay.com/photo/2018/04/08/18/31/japanese-cherry-blossom-tree-3302085_960_720.jpg" width=100px></img>
+            <li>Daffodils</li><img src="https://get.pxhere.com/photo/daffodil-daffodils-garden-yellow-green-flowers-gardens-spring-community-flower-plant-flora-narcissus-flowering-plant-amaryllis-family-petal-wildflower-plant-stem-computer-wallpaper-1435623.jpg" width=100px>
+            <li>Blossom</li> <img src="https://c.pxhere.com/photos/e0/18/beautiful_bloom_blooming_blossom_branch_bright_cherry_blossoms_close_up-1519991.jpg!d" width=100px></img>
             <li>New leaves on the trees</li> <img src="https://c.pxhere.com/photos/c1/13/new_leaves_rugosa_rose_rose_rain_wet_green_plant_leaves_flora-571645.jpg!d" width=100px>
             <li>Chicks</li><img src="https://c.pxhere.com/photos/b3/40/chicks_chicken_small_poultry_young_animal_fluff_young_meadow-554706.jpg!d" width=100px>
             <li>Blue skies</li> <img src="https://images.pexels.com/photos/1304625/pexels-photo-1304625.jpeg?auto=compress&cs=tinysrgb&dpr=3&h=750&w=1260" width=100px>
@@ -57,16 +57,16 @@
             <li>Buttercups</li><img src="https://images.pexels.com/photos/1933552/pexels-photo-1933552.jpeg?auto=compress&cs=tinysrgb&dpr=3&h=750&w=1260" width=100px>
             <li>Rabbits in the fields</li><img src="https://c.pxhere.com/photos/4a/6a/rabbit_mammal_green_spring_brown_bunny_grass_gray-1006506.jpg!d" width=100px>
             <li>Chocolate eggs</li><img src="https://images-na.ssl-images-amazon.com/images/I/A1m7G1CqJSL._SL1500_.jpg" width=100px>
-            <li>A bumblebee</li><img src="https://cdn.pixabay.com/photo/2014/11/17/20/55/bee-535247_960_720.jpg" width=100px>
+            <li>A bumblebee</li><img src="https://c.pxhere.com/photos/7a/88/bumblebee_bumble_bees_summer_garden_purple_flowers_insect-811357.jpg!d" width=100px>
         </ul>
     </div>
     <div class="col-4">
         <ul>
-            <li>Butterflies</li><img src="https://cdn.pixabay.com/photo/2019/03/16/18/39/painted-peacock-4059454_960_720.jpg" width=100px>
+            <li>Butterflies</li><img src="https://www.nps.gov/band/learn/nature/images/queen_1.jpg?maxwidth=1200&maxheight=1200&autorotate=false" width=100px>
             <li>A bird making a nest</li><img src="https://upload.wikimedia.org/wikipedia/commons/5/51/Turdus_merula_Nesting.jpg" width=100px>
             <li>Snowdrops</li><img src="https://c.pxhere.com/photos/6b/c2/snowdrops_cluster_white_flower_the_messenger_of_spring_spring_snowdrop_plants_flower_bulbs-1380605.jpg!d" width=100px>
             <li>Crocuses</li><img src="https://upload.wikimedia.org/wikipedia/commons/2/27/Crocuses_%28258668933%29.jpeg"width=100px>
-            <li>Birds singing</li><img src="https://cdn.pixabay.com/photo/2019/01/22/17/56/singing-3948645_960_720.jpg"width=100px>
+            <li>Birds singing</li><img src="https://upload.wikimedia.org/wikipedia/commons/6/6c/Regulus_ignicapilla_-Galicia%2C_Spain_-singing_in_a_conifer_tree-8_%281%29.jpg"width=100px>
         </ul>
     </div>
 </div>
