--- a/games.html
+++ b/games.html
@@ -10,6 +10,14 @@
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.7.2/css/all.css" />
     <link rel="stylesheet" href="assets/css/style.css" />
     <title>Springtime For Kids</title>
+    <style>
+        .games-img{
+            border-radius: 50%;
+        }
+        .games-checklist{
+            font-size: 25px;
+        }
+    </style>
 </head>
 
 <body>
@@ -35,35 +43,32 @@
         <h2 class="title-h2">Here is your Spring activity to do list!</h2>
     </header>
     <main>
-    <div class="container">
-        </div class="row">
-
-
+    <div class="container games-checklist">
         <div class="row">
             <div class="column-md-4">
                 <input type="checkbox" name="activities" value="cycling">Cycling
-                <img src="assets/images/cycling.jpeg">
+                <img class="games-img" src="assets/images/cycling.jpeg">
                 <input type="checkbox" name="activities" value="play football">Play football
-                <img src="assets/images/fooftball.jpeg">
+                <img class="games-img"  src="assets/images/fooftball.jpeg">
                 <input type="checkbox" name="activities" value="fly a kite">Fly a kite
-                <img src="assets/images/kite.jpeg"></div>
+                <img class="games-img" src="assets/images/kite.jpeg"></div>
         </div>
         <div class="row">
             <div class="column-md-4">
                 <input type="checkbox" name="activities" value="plant flowers">Plant flowers
-                <img src="assets/images/flower.jpeg">
+                <img class="games-img" src="assets/images/flower.jpeg">
                 <input type="checkbox" name="activities" value="go for a hike">Go for a hike
-                <img src="assets/images/hiking.jpeg">
+                <img class="games-img" src="assets/images/hiking.jpeg">
                 <input type="checkbox" name="activities" value="blow bubbles">Blow bubbles
-                <img src="assets/images/bubbles.jpeg">
+                <img class="games-img" src="assets/images/bubbles.jpeg">
             </div>
         </div>
         <div class="row">
             <div class="column-md-4">
                 <input type="checkbox" name="activities" value="treasure hunt">Go for a treasure hunt
-                <img src="assets/images/treasure.jpeg">
+                <img class="games-img" src="assets/images/treasure.jpeg">
                 <input type="checkbox" name="activities" value="play twister">Play Twister
-                <img src="assets/images/twister.jpeg">
+                <img class="games-img" src="assets/images/twister.jpeg">
             </div>
         </div>
       </div>
