--- a/games.html
+++ b/games.html
@@ -10,6 +10,7 @@
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.7.2/css/all.css" />
     <link rel="stylesheet" href="assets/css/style.css" />
     <title>Springtime For Kids</title>
+    
 </head>
 
 <body>
@@ -32,38 +33,50 @@
     <header>
 
         <h1 class="title-h1">Spring time! It is so beautiful and warm so you can go outside and have fun!</h1>
-        <h2 class="title-h2">Here is your Spring activity to do list!</h2>
+        <h2 class="title-h2">Here is your Spring activity to-do list!</h2>
     </header>
     <main>
-    <div class="container games-checklist">
-        <div class="row">
-            <div class="column-md-4">
-                <input type="checkbox" name="activities" value="cycling">Cycling
-                <img class="games-img" src="assets/images/cycling.jpeg">
-                <input type="checkbox" name="activities" value="play football">Play football
-                <img class="games-img"  src="assets/images/fooftball.jpeg">
-                <input type="checkbox" name="activities" value="fly a kite">Fly a kite
-                <img class="games-img" src="assets/images/kite.jpeg"></div>
-        </div>
-        <div class="row">
-            <div class="column-md-4">
-                <input type="checkbox" name="activities" value="plant flowers">Plant flowers
-                <img class="games-img" src="assets/images/flower.jpeg">
-                <input type="checkbox" name="activities" value="go for a hike">Go for a hike
-                <img class="games-img" src="assets/images/hiking.jpeg">
-                <input type="checkbox" name="activities" value="blow bubbles">Blow bubbles
-                <img class="games-img" src="assets/images/bubbles.jpeg">
+        <div class="section">
+            <div class="container games-checklist">
+                <div class="row">
+                    <div class="column-md-4"><input type="checkbox" name="activities" value="cycling">Cycling
+                        <img class="games-img" src="assets/images/cycling.jpeg">
+                    </div>
+                    <div class="column-md-4">
+                        <input type="checkbox" name="activities" value="play football">Play football
+                        <img class="games-img" src="assets/images/fooftball.jpeg">
+                    </div>
+                    <div class="column-md-4">
+                        <input type="checkbox" name="activities" value="fly a kite">Fly a kite
+                        <img class="games-img" src="assets/images/kite.jpeg"></div>
+                </div>
+                <div class="row">
+                    <div class="column-md-4"><input type="checkbox" name="activities" value="plant flowers">Plant
+                        flowers
+                        <img class="games-img" src="assets/images/flower.jpeg">
+                    </div>
+                    <div class="column-md-4">
+                        <input type="checkbox" name="activities" value="go for a hike">Go for a hike
+                        <img class="games-img" src="assets/images/hiking.jpeg">
+                    </div>
+                    <div class="column-md-4">
+                        <input type="checkbox" name="activities" value="blow bubbles">Blow bubbles
+                        <img class="games-img" src="assets/images/bubbles.jpeg">
+                    </div>
+                </div>
+                <div class="row">
+                    <div class="column-md-6">
+                        <input type="checkbox" name="activities" value="treasure hunt">Go for a treasure hunt
+                        <img class="games-img" src="assets/images/treasure.jpeg">
+                    </div>
+                    <div class="column-md-6">
+                        <input type="checkbox" name="activities" value="play twister">Play Twister
+                        <img class="games-img" src="assets/images/twister.jpeg">
+                    </div>
+                </div>
+
             </div>
         </div>
-        <div class="row">
-            <div class="column-md-4">
-                <input type="checkbox" name="activities" value="treasure hunt">Go for a treasure hunt
-                <img class="games-img" src="assets/images/treasure.jpeg">
-                <input type="checkbox" name="activities" value="play twister">Play Twister
-                <img class="games-img" src="assets/images/twister.jpeg">
-            </div>
-        </div>
-      </div>
     </main>
     <footer>
         <p>Created by Team9 for the Easter Hackathon 2019 on Code Institute.</p>
