--- a/games.html
+++ b/games.html
@@ -36,7 +36,7 @@
         <h2 class="title-h2">Here is your Spring activity to-do list!</h2>
     </header>
     <main>
-        <div class="section">
+        <section>
             <div class="container games-checklist">
                 <div class="row">
                     <div class="column-md-4"><input type="checkbox" name="activities" value="cycling">Cycling
@@ -76,7 +76,7 @@
                 </div>
 
             </div>
-        </div>
+        </section>
     </main>
     <footer>
         <p>Created by Team9 for the Easter Hackathon 2019 on Code Institute.</p>
