--- a/games.html
+++ b/games.html
@@ -1,99 +1,116 @@
 <!DOCTYPE html>
 <html lang="en">
-
-<head>
+  <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
-    <link rel="stylesheet"
-        href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.3.1/css/bootstrap.min.css" />
-    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.7.2/css/all.css" />
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.3.1/css/bootstrap.min.css"
+    />
+    <link
+      rel="stylesheet"
+      href="https://use.fontawesome.com/releases/v5.7.2/css/all.css"
+    />
     <link rel="stylesheet" href="assets/css/style.css" />
     <title>Springtime For Kids</title>
-    
-</head>
-
-<body>
-    <nav class="navbar navbar-expand-lg navbar-light bg-light">
-        <ul class="nav ">
-            <li class="nav-item">
-                <a class="nav-link active" href="#">Home</a>
-            </li>
-            <li class="nav-item">
-                <a class="nav-link" href="#">Story Time</a>
-            </li>
-            <li class="nav-item">
-                <a class="nav-link" href="#">Games</a>
-            </li>
-            <li class="nav-item">
-                <a class="nav-link" href="#">Signs of Spring</a>
-            </li>
-        </ul>
+  </head>
+  <body>
+    <nav class="navbar navbar-expand-lg" id="our-nav">
+      <ul class="nav ">
+        <li class="nav-item">
+          <a class="nav-link active" href="index.html" disabled>Home</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="spring-story.html">Story Time</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="games.html">Games</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="signsofspring.html">Signs of Spring</a>
+        </li>
+      </ul>
     </nav>
     <header>
-
-        <h1 class="title-h1">Spring time! It is so beautiful and warm so you can go outside and have fun!</h1>
-        <h2 class="title-h2">Here is your Spring activity to-do list!</h2>
+      <h1>Springtime for Kids</h1>
     </header>
-    <main>
-        <section>
-            <div class="container games-checklist">
-                <div class="row">
-                    <div class="column-md-4"><input type="checkbox" name="activities" value="cycling">Cycling
-                        <img class="games-img" src="assets/images/cycling.jpeg">
-                    </div>
-                    <div class="column-md-4">
-                        <input type="checkbox" name="activities" value="play football">Play football
-                        <img class="games-img" src="assets/images/fooftball.jpeg">
-                    </div>
-                    <div class="column-md-4">
-                        <input type="checkbox" name="activities" value="fly a kite">Fly a kite
-                        <img class="games-img" src="assets/images/kite.jpeg"></div>
-                </div>
-                <div class="row">
-                    <div class="column-md-4"><input type="checkbox" name="activities" value="plant flowers">Plant
-                        flowers
-                        <img class="games-img" src="assets/images/flower.jpeg">
-                    </div>
-                    <div class="column-md-4">
-                        <input type="checkbox" name="activities" value="go for a hike">Go for a hike
-                        <img class="games-img" src="assets/images/hiking.jpeg">
-                    </div>
-                    <div class="column-md-4">
-                        <input type="checkbox" name="activities" value="blow bubbles">Blow bubbles
-                        <img class="games-img" src="assets/images/bubbles.jpeg">
-                    </div>
-                </div>
-                <div class="row">
-                    <div class="column-md-6">
-                        <input type="checkbox" name="activities" value="treasure hunt">Go for a treasure hunt
-                        <img class="games-img" src="assets/images/treasure.jpeg">
-                    </div>
-                    <div class="column-md-6">
-                        <input type="checkbox" name="activities" value="play twister">Play Twister
-                        <img class="games-img" src="assets/images/twister.jpeg">
-                    </div>
-                </div>
 
+    <main>
+      <section>
+        <h2>
+          Spring time! It is so beautiful and warm so you can go outside and
+          have fun!
+        </h2>
+        <h3>Here is your Spring activity to-do list!</h3>
+        <div class="container games-checklist">
+          <div class="row">
+            <div class="col-md-4">
+              <input type="checkbox" name="activities" value="cycling" />
+              <label for="activity">Cycling</label>
+              <img class="games-img" src="assets/images/cycling.jpeg" />
             </div>
-        </section>
+            <div class="col-md-4">
+              <input type="checkbox" name="activities" value="play football" />
+              <label for="activity">Play Football</label>
+              <img class="games-img" src="assets/images/fooftball.jpeg" />
+            </div>
+            <div class="col-md-4">
+              <input type="checkbox" name="activities" value="fly a kite" />
+              <label for="activity">Fly a kite</label>
+              <img class="games-img" src="assets/images/kite.jpeg" />
+            </div>
+
+            <div class="col-md-4">
+              <input type="checkbox" name="activities" value="plant flowers" />
+              <label for="activity">Plant Flowers</label>
+              <img class="games-img" src="assets/images/flower.jpeg" />
+            </div>
+            <div class="col-md-4">
+              <input type="checkbox" name="activities" value="go for a hike" />
+              <label for="activity">Go for a Hike</label>
+              <img class="games-img" src="assets/images/hiking.jpeg" />
+            </div>
+            <div class="col-md-4">
+              <input type="checkbox" name="activities" value="blow bubbles" />
+              <label for="activity">Blow Bubbles</label>
+              <img class="games-img" src="assets/images/bubbles.jpeg" />
+            </div>
+            <div class="col-md-4">
+              <input type="checkbox" name="activities" value="treasure hunt" />
+              <label for="activity">Go for a treasure hunt</label>
+              <img class="games-img" src="assets/images/treasure.jpeg" />
+            </div>
+            <div class="col-md-4">
+              <input type="checkbox" name="activities" value="play twister" />
+              <label for="activity">Play Twister</label>
+              <img class="games-img" src="assets/images/twister.jpeg" />
+            </div>
+          </div>
+        </div>
+      </section>
     </main>
     <footer>
-        <p>Created by Team9 for the Easter Hackathon 2019 on Code Institute.</p>
-        <p>Find us on Github:</p>
-        <div class="container-fluid icons-div">
-            <a href="https://github.com/andreeaiosip">
-                <i id="andreea" class="fab fa-github-alt"></i>
-            </a>
-            <a href="https://github.com/varroz56"><i id="zoltan" class="fab fa-github-alt"></i></a>
-            <a href="https://github.com/oliviatatum"><i id="olivia" class="fab fa-github-alt"></i></a>
-            <a href="https://github.com/wings30306"><i id="jo" class="fab fa-github-alt"></i></a>
-        </div>
+      <p>Created by Team9 for the Easter Hackathon 2019 on Code Institute.</p>
+      <p>Find us on Github:</p>
+      <div class="container-fluid icons-div">
+        <a href="https://github.com/andreeaiosip">
+          <i id="andreea" class="fab fa-github-alt"></i>
+        </a>
+        <a href="https://github.com/varroz56"
+          ><i id="zoltan" class="fab fa-github-alt"></i
+        ></a>
+        <a href="https://github.com/oliviatatum"
+          ><i id="olivia" class="fab fa-github-alt"></i
+        ></a>
+        <a href="https://github.com/wings30306"
+          ><i id="jo" class="fab fa-github-alt"></i
+        ></a>
+      </div>
     </footer>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.3.1/jquery.slim.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.3.1/js/bootstrap.min.js"></script>
     <script src="assets/js/script.js"></script>
-</body>
-
+  </body>
 </html>
