Style images in signsofspring page to match games

--- a/signsofspring.html
+++ b/signsofspring.html
@@ -44,29 +44,29 @@
 <div class="row">
     <div class="col-4">
         <ul class=list-unstyled>
-            <li><input type= checkbox> Daffodils</li><img src="https://get.pxhere.com/photo/daffodil-daffodils-garden-yellow-green-flowers-gardens-spring-community-flower-plant-flora-narcissus-flowering-plant-amaryllis-family-petal-wildflower-plant-stem-computer-wallpaper-1435623.jpg" width=100px>
-            <li><input type= checkbox> Blossom</li> <img src="https://c.pxhere.com/photos/e0/18/beautiful_bloom_blooming_blossom_branch_bright_cherry_blossoms_close_up-1519991.jpg!d" width=100px></img>
-            <li><input type= checkbox> New leaves on the trees</li> <img src="https://c.pxhere.com/photos/c1/13/new_leaves_rugosa_rose_rose_rain_wet_green_plant_leaves_flora-571645.jpg!d" width=100px>
-            <li><input type= checkbox> Chicks</li><img src="https://c.pxhere.com/photos/b3/40/chicks_chicken_small_poultry_young_animal_fluff_young_meadow-554706.jpg!d" width=100px>
-            <li><input type= checkbox> Blue skies</li> <img src="https://images.pexels.com/photos/1304625/pexels-photo-1304625.jpeg?auto=compress&cs=tinysrgb&dpr=3&h=750&w=1260" width=100px>
+            <li><input type= checkbox> Daffodils</li><img class="games-img" src="https://get.pxhere.com/photo/daffodil-daffodils-garden-yellow-green-flowers-gardens-spring-community-flower-plant-flora-narcissus-flowering-plant-amaryllis-family-petal-wildflower-plant-stem-computer-wallpaper-1435623.jpg">
+            <li><input type= checkbox> Blossom</li> <img class="games-img" src="https://c.pxhere.com/photos/e0/18/beautiful_bloom_blooming_blossom_branch_bright_cherry_blossoms_close_up-1519991.jpg!d"></img>
+            <li><input type= checkbox> New leaves on the trees</li> <img class="games-img" src="https://c.pxhere.com/photos/c1/13/new_leaves_rugosa_rose_rose_rain_wet_green_plant_leaves_flora-571645.jpg!d" width=100px>
+            <li><input type= checkbox> Chicks</li><img class="games-img" src="https://c.pxhere.com/photos/b3/40/chicks_chicken_small_poultry_young_animal_fluff_young_meadow-554706.jpg!d">
+            <li><input type= checkbox> Blue skies</li> <img class="games-img" src="https://images.pexels.com/photos/1304625/pexels-photo-1304625.jpeg?auto=compress&cs=tinysrgb&dpr=3&h=750&w=1260">
         </ul>
     </div>
     <div class="col-4">
         <ul class=list-unstyled>
-            <li><input type= checkbox> Lambs</li><img src="https://www.maxpixel.net/static/photo/1x/Livestock-Lamb-Sheep-Lambs-Agriculture-Wool-Ewe-3709615.jpg"width=100px>
-            <li><input type= checkbox> Buttercups</li><img src="https://images.pexels.com/photos/1933552/pexels-photo-1933552.jpeg?auto=compress&cs=tinysrgb&dpr=3&h=750&w=1260" width=100px>
-            <li><input type= checkbox> Rabbits in the fields</li><img src="https://c.pxhere.com/photos/4a/6a/rabbit_mammal_green_spring_brown_bunny_grass_gray-1006506.jpg!d" width=100px>
-            <li><input type= checkbox> Chocolate eggs</li><img src="https://images-na.ssl-images-amazon.com/images/I/A1m7G1CqJSL._SL1500_.jpg" width=100px>
-            <li><input type= checkbox> A bumblebee</li><img src="https://c.pxhere.com/photos/7a/88/bumblebee_bumble_bees_summer_garden_purple_flowers_insect-811357.jpg!d" width=100px>
+            <li><input type= checkbox> Lambs</li><img class="games-img" src="https://www.maxpixel.net/static/photo/1x/Livestock-Lamb-Sheep-Lambs-Agriculture-Wool-Ewe-3709615.jpg">
+            <li><input type= checkbox> Buttercups</li><img class="games-img" src="https://images.pexels.com/photos/1933552/pexels-photo-1933552.jpeg?auto=compress&cs=tinysrgb&dpr=3&h=750&w=1260">
+            <li><input type= checkbox> Rabbits in the fields</li><img class="games-img" src="https://c.pxhere.com/photos/4a/6a/rabbit_mammal_green_spring_brown_bunny_grass_gray-1006506.jpg!d">
+            <li><input type= checkbox> Chocolate eggs</li><img class="games-img" src="https://images-na.ssl-images-amazon.com/images/I/A1m7G1CqJSL._SL1500_.jpg">
+            <li><input type= checkbox> A bumblebee</li><img class="games-img" src="https://c.pxhere.com/photos/7a/88/bumblebee_bumble_bees_summer_garden_purple_flowers_insect-811357.jpg!d">
         </ul>
     </div>
     <div class="col-4">
         <ul class=list-unstyled>
-            <li><input type= checkbox> Butterflies</li><img src="https://www.nps.gov/band/learn/nature/images/queen_1.jpg?maxwidth=1200&maxheight=1200&autorotate=false" width=100px>
-            <li><input type= checkbox> A bird making a nest</li><img src="https://upload.wikimedia.org/wikipedia/commons/5/51/Turdus_merula_Nesting.jpg" width=100px>
-            <li><input type= checkbox> Snowdrops</li><img src="https://c.pxhere.com/photos/6b/c2/snowdrops_cluster_white_flower_the_messenger_of_spring_spring_snowdrop_plants_flower_bulbs-1380605.jpg!d" width=100px>
-            <li><input type= checkbox> Crocuses</li><img src="https://upload.wikimedia.org/wikipedia/commons/2/27/Crocuses_%28258668933%29.jpeg"width=100px>
-            <li><input type= checkbox> Birds singing</li><img src="https://upload.wikimedia.org/wikipedia/commons/6/6c/Regulus_ignicapilla_-Galicia%2C_Spain_-singing_in_a_conifer_tree-8_%281%29.jpg"width=100px>
+            <li><input type= checkbox> Butterflies</li><img class="games-img" src="https://www.nps.gov/band/learn/nature/images/queen_1.jpg?maxwidth=1200&maxheight=1200&autorotate=false" width=100px>
+            <li><input type= checkbox> A bird making a nest</li><img class="games-img" src="https://upload.wikimedia.org/wikipedia/commons/5/51/Turdus_merula_Nesting.jpg" width=100px>
+            <li><input type= checkbox> Snowdrops</li><img class="games-img" src="https://c.pxhere.com/photos/6b/c2/snowdrops_cluster_white_flower_the_messenger_of_spring_spring_snowdrop_plants_flower_bulbs-1380605.jpg!d" width=100px>
+            <li><input type= checkbox> Crocuses</li><img class="games-img" src="https://upload.wikimedia.org/wikipedia/commons/2/27/Crocuses_%28258668933%29.jpeg"width=100px>
+            <li><input type= checkbox> Birds singing</li><img class="games-img" src="https://upload.wikimedia.org/wikipedia/commons/6/6c/Regulus_ignicapilla_-Galicia%2C_Spain_-singing_in_a_conifer_tree-8_%281%29.jpg"width=100px>
         </ul>
     </div>
 </div>
