--- a/index.html
+++ b/index.html
@@ -37,11 +37,19 @@
     </header>
     <main>
       <section>
-        <p>After a cold winter, it is always wonderful when spring arrives, and the world seems to wake up from a long sleep. It is also a fun time, as there are more opportunities to play outside. As you explore this website, you will find lots of ideas to make your springtime the best yet!
-        <br>
-        If April showers leave you stuck inside, snuggle up with the story on the Story Time page.
-        If you're in the mood to play outside, check out the Games page for some ideas for fun activities.
-        Finally, when you go on a nature walk, keep an eye out for the Signs of Spring</p> 
+        <p>After a cold winter, it is always wonderful when spring arrives, and the world seems to wake up from a long sleep. It is also a fun time, as there are more opportunities to play outside. As you explore this website, you will find lots of ideas to make your springtime the best yet!</p>
+        <p>
+            If April showers leave you stuck inside, snuggle up with the story on the <a href="spring-story.html">Story Time </a> page.
+            <a href="spring-story.html" class="btn btn-success">Read the Story</a>
+        </p>
+        <p>
+           If you're in the mood to play outside, check out the <a href="games.html">Games</a>  page for some ideas for fun activities.
+           <a href="games.html" class="btn btn-success">Play a Game</a> 
+        </p>
+        <p>
+            Finally, when you go on a nature walk, keep an eye out for the <a href="signsofspring.html">Signs of Spring</a>.
+            <a href="signsofspring.html" class="btn btn-success">Signs of Spring</a>
+        </p>
       </section>
     </main>
     <footer>
