--- a/games.html
+++ b/games.html
@@ -1,116 +1,123 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
+
+<head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
-    <link
-      rel="stylesheet"
-      href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.3.1/css/bootstrap.min.css"
-    />
-    <link
-      rel="stylesheet"
-      href="https://use.fontawesome.com/releases/v5.7.2/css/all.css"
-    />
+    <link rel="stylesheet"
+        href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.3.1/css/bootstrap.min.css" />
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.7.2/css/all.css" />
     <link rel="stylesheet" href="assets/css/style.css" />
     <title>Springtime For Kids</title>
-  </head>
-  <body>
-    <nav class="navbar navbar-expand-lg" id="our-nav">
-      <ul class="nav ">
-        <li class="nav-item">
-          <a class="nav-link active" href="index.html" disabled>Home</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" href="spring-story.html">Story Time</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" href="games.html">Games</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" href="signsofspring.html">Signs of Spring</a>
-        </li>
-      </ul>
+</head>
+
+<body>
+    <nav class="navbar navbar-expand-lg navbar-light" id="our-nav">
+
+        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
+            aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+        </button>
+
+        <div class="collapse navbar-collapse" id="navbarSupportedContent">
+
+            <ul class="nav navbar-nav mr-auto">
+                <li class="nav-item">
+                    <a class="nav-link active" href="index.html" disabled>Home</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="spring-story.html">Story Time</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="games.html">Games</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="signsofspring.html">Signs of Spring</a>
+                </li>
+            </ul>
+
+        </div>
     </nav>
     <header>
-      <h1>Springtime for Kids</h1>
+        <h1>Springtime for Kids</h1>
     </header>
 
     <main>
-      <section>
-        <h2>
-          Spring time! It is so beautiful and warm so you can go outside and
-          have fun!
-        </h2>
-        <h3>Here is your Spring activity to-do list!</h3>
-        <div class="container games-checklist">
-          <div class="row">
-            <div class="col-md-4">
-              <input type="checkbox" name="activities" value="cycling" />
-              <label for="activity">Cycling</label>
-              <img class="games-img" src="assets/images/cycling.jpeg" />
-            </div>
-            <div class="col-md-4">
-              <input type="checkbox" name="activities" value="play football" />
-              <label for="activity">Play Football</label>
-              <img class="games-img" src="assets/images/fooftball.jpeg" />
-            </div>
-            <div class="col-md-4">
-              <input type="checkbox" name="activities" value="fly a kite" />
-              <label for="activity">Fly a kite</label>
-              <img class="games-img" src="assets/images/kite.jpeg" />
-            </div>
+        <section>
+            <h2>
+                Spring time! It is so beautiful and warm so you can go outside and
+                have fun!
+            </h2>
+            <h3>Here is your Spring activity to-do list!</h3>
+            <div class="container games-checklist">
+                <div class="row">
+                    <div class="col-md-4">
+                        <input type="checkbox" name="activities" value="cycling" />
+                        <label for="activity">Cycling</label>
+                        <img class="games-img" src="assets/images/cycling.jpeg" />
+                    </div>
+                    <div class="col-md-4">
+                        <input type="checkbox" name="activities" value="play football" />
+                        <label for="activity">Play Football</label>
+                        <img class="games-img" src="assets/images/fooftball.jpeg" />
+                    </div>
+                    <div class="col-md-4">
+                        <input type="checkbox" name="activities" value="fly a kite" />
+                        <label for="activity">Fly a kite</label>
+                        <img class="games-img" src="assets/images/kite.jpeg" />
+                    </div>
 
-            <div class="col-md-4">
-              <input type="checkbox" name="activities" value="plant flowers" />
-              <label for="activity">Plant Flowers</label>
-              <img class="games-img" src="assets/images/flower.jpeg" />
+                    <div class="col-md-4">
+                        <input type="checkbox" name="activities" value="plant flowers" />
+                        <label for="activity">Plant Flowers</label>
+                        <img class="games-img" src="assets/images/flower.jpeg" />
+                    </div>
+                    <div class="col-md-4">
+                        <input type="checkbox" name="activities" value="go for a hike" />
+                        <label for="activity">Go for a Hike</label>
+                        <img class="games-img" src="assets/images/hiking.jpeg" />
+                    </div>
+                    <div class="col-md-4">
+                        <input type="checkbox" name="activities" value="blow bubbles" />
+                        <label for="activity">Blow Bubbles</label>
+                        <img class="games-img" src="assets/images/bubbles.jpeg" />
+                    </div>
+                    <div class="col-md-4">
+                        <input type="checkbox" name="activities" value="treasure hunt" />
+                        <label for="activity">Treasure hunt</label>
+                        <img class="games-img" src="assets/images/treasure.jpeg" />
+                    </div>
+                    <div class="col-md-4">
+                        <input type="checkbox" name="activities" value="play twister" />
+                        <label for="activity">Play Twister</label>
+                        <img class="games-img" src="assets/images/twister.jpeg" />
+                    </div>
+                    <div class="col-md-4">
+                        <input type="checkbox" name="activities" value="wall climbing" />
+                        <label for="activity">Wall climbing</label>
+                        <img class="games-img" src="assets/images/climbing.jpg" />
+                    </div>
+                </div>
             </div>
-            <div class="col-md-4">
-              <input type="checkbox" name="activities" value="go for a hike" />
-              <label for="activity">Go for a Hike</label>
-              <img class="games-img" src="assets/images/hiking.jpeg" />
-            </div>
-            <div class="col-md-4">
-              <input type="checkbox" name="activities" value="blow bubbles" />
-              <label for="activity">Blow Bubbles</label>
-              <img class="games-img" src="assets/images/bubbles.jpeg" />
-            </div>
-            <div class="col-md-4">
-              <input type="checkbox" name="activities" value="treasure hunt" />
-              <label for="activity">Go for a treasure hunt</label>
-              <img class="games-img" src="assets/images/treasure.jpeg" />
-            </div>
-            <div class="col-md-4">
-              <input type="checkbox" name="activities" value="play twister" />
-              <label for="activity">Play Twister</label>
-              <img class="games-img" src="assets/images/twister.jpeg" />
-            </div>
-          </div>
-        </div>
-      </section>
+        </section>
     </main>
     <footer>
-      <p>Created by Team9 for the Easter Hackathon 2019 on Code Institute.</p>
-      <p>Find us on Github:</p>
-      <div class="container-fluid icons-div">
-        <a href="https://github.com/andreeaiosip">
-          <i id="andreea" class="fab fa-github-alt"></i>
-        </a>
-        <a href="https://github.com/varroz56"
-          ><i id="zoltan" class="fab fa-github-alt"></i
-        ></a>
-        <a href="https://github.com/oliviatatum"
-          ><i id="olivia" class="fab fa-github-alt"></i
-        ></a>
-        <a href="https://github.com/wings30306"
-          ><i id="jo" class="fab fa-github-alt"></i
-        ></a>
-      </div>
+        <p>Created by Team9 for the Easter Hackathon 2019 on Code Institute.</p>
+        <p>Find us on Github:</p>
+        <div class="container-fluid icons-div">
+            <a href="https://github.com/andreeaiosip">
+                <i id="andreea" class="fab fa-github-alt"></i>
+            </a>
+            <a href="https://github.com/varroz56"><i id="zoltan" class="fab fa-github-alt"></i></a>
+            <a href="https://github.com/oliviatatum"><i id="olivia" class="fab fa-github-alt"></i></a>
+            <a href="https://github.com/wings30306"><i id="jo" class="fab fa-github-alt"></i></a>
+        </div>
     </footer>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.3.1/jquery.slim.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.3.1/js/bootstrap.min.js"></script>
     <script src="assets/js/script.js"></script>
-  </body>
+</body>
+
 </html>
