--- a/spring-story.html
+++ b/spring-story.html
@@ -13,6 +13,12 @@
 
 <body>
     <nav class="navbar navbar-expand-lg" id="our-nav">
+            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
+            aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+        </button>
+
+        <div class="collapse navbar-collapse" id="navbarSupportedContent">
         <ul class="nav ">
             <li class="nav-item">
                 <a class="nav-link active" href="index.html" disabled>Home</a>
